# Feather-Mesh

./: README.md
feather-mesh/: README.md
feather-mesh/mesh_core/src/: db.rs
python_mvp/: .gitignore  README.md  feam_registry.json  pyproject.toml
python_mvp/registry/: cli.py
